src/kubernetes/prod/000-custom-env.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels: 
    app: imixs-documents
spec:
  template:
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          value: my-password
